Minor cleanup in PathCompiler